# yomidict

./: LICENSE  README.md  pyproject.toml  requirements.txt
dictionaries/: PHCore.txt  PHFull.txt  README.md
yomidict/: __init__.py  dictmaker.py
